# ai-home-maintenance

./: .gitattributes  .gitignore  .windsurfrules  IMPLEMENTATION_SUMMARY.md  _ac_first.txt  _fr_artifact.txt  _fr_resp.txt  _fr_sat_prompt.txt  _nfr_artifact.txt  _p7_artifact.txt  _p7_prompt.txt  _p7_response.txt  _packets.ndjson  _v1_handoff_document.json  compose.common.yaml  compose.dev.yaml  compose.librechat.yaml  compose.prod.yaml  fetch-goose-releases.ps1  generate_env_batch.py  goose-releases.jsonl  librechat.docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
.claude/: settings.local.json
JanumiCode/: JanumiCode.txt
JanumiCode/deep-memory-agent/: pyproject.toml
JanumiCode/deep-memory-agent/.deepagents/: .mcp.json  AGENTS.md
JanumiCode/deep-memory-agent/.deepagents/skills/audit-trace/: SKILL.md
JanumiCode/deep-memory-agent/.deepagents/skills/fast-recall/: SKILL.md
JanumiCode/deep-memory-agent/.deepagents/skills/memory-research/: SKILL.md
JanumiCode/deep-memory-agent/src/deep_memory_agent/: __init__.py  __main__.py  scoring.py
JanumiCode/deep-memory-agent/src/deep_memory_agent/conflict/: __init__.py
JanumiCode/deep-memory-agent/src/deep_memory_agent/db/: __init__.py  connection.py  fts.py  graph.py  memory_store.py  queries.py  vector.py
JanumiCode/deep-memory-agent/src/deep_memory_agent/ingestion/: __init__.py  cli.py  edge_proposer.py  extractor.py  normalizer.py
JanumiCode/deep-memory-agent/src/deep_memory_agent/mcp_server/: __init__.py  server.py
JanumiCode/deep-memory-agent/src/deep_memory_agent/models/: __init__.py  authority.py  base.py  decisions.py  packets.py  provenance.py  records.py  relations.py
JanumiCode/deep-memory-agent/tests/: test_ingestion.py  test_mcp_tools.py  test_models.py  test_scoring.py
JanumiCode/deep-memory-agent/tests/fixtures/: sample_db.py
JanumiCode/voyage-embed/: pyproject.toml
JanumiCode/voyage-embed/golden_vectors/: suite_default.json
JanumiCode/voyage-embed/src/voyage_embed/: __init__.py  __main__.py  cache.py  cli.py  engine.py  rpc.py
JanumiCode/voyage-embed/tests/: test_engine.py  test_rpc.py
backend/fastapi-agents/service_request/: .gitignore  README.md  crewai_flow.html  pyproject.toml  service_request_input.json  service_request_intake.json
backend/fastapi-agents/service_request/src/service_request/: main.py  main_poem.py
backend/fastapi-agents/service_request/src/service_request/crews/service_request_crew/: models.py  service_request_crew.py
backend/fastapi-agents/service_request/src/service_request/crews/service_request_crew/config/: agents.yaml  tasks.yaml
backend/fastapi-agents/service_request/src/service_request/tools/: bing_search_tool.py
backups/: backup_20251105_134021.dump  backup_20251105_134111.dump  (+5 more)
core-engine/: pyproject.toml
docs/: USDZ_MIME_TYPES.md  (+30 more)
hestami_deep_historian/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
hestami_deep_historian/config/: historian.yaml
hestami_deep_historian/docs/: Useful Shell Commands.md
hestami_deep_historian/docs/Deep Historian/: Historian Agent Platform Design Blueprint.md  Implementation Roadmap - Index.md  Phase 0 - Project Setup and Baseline.md  Phase 3 - Truth Context and Advanced Reasoning.md  Phase 5 - Evaluation Harness and Refinement.md
hestami_deep_historian/docs/PageIndex/: PageIndex -  Document Search Examples.md  PageIndex - Simple Vectorless RAG with PageIndex.md  PageIndex - Tree Search Examples.md
hestami_deep_historian/docs/RAGFlow/: RAGFlow - Construct knowledge graph.md  RAGFlow - Enable RAPTOR.md
hestami_deep_historian/docs/specs/Postman/: README.md  Test_1_Basic_Summarization.json  Test_2_Structured_Summarization.json  Test_3_MultiSection_Context.json  Test_4_Relevance_Scoring.json  Test_5_Deep_Section_Selection.json  Test_6_Verification_Compliance.json  Test_7_MultiDocument_Comparison.json
hestami_deep_historian/docs/specs/Postman/Scenario_Tests/: FILES_CREATED.md  README.md  Test_S1_01_Executor_Proposal.json  Test_S1_01_Expected_Output.md  Test_S1_02_Claim_Decomposition.json  Test_S1_02_Expected_Output.md  Test_S1_03_Coverage_Plan.json  Test_S1_03_Expected_Output.md  Test_S1_05_Expected_Output.md  Test_S1_05_PageIndex_Evidence_Retrieval.json  Test_S1_06_Expected_Output.md  Test_S1_06_PageIndex_Counter_Evidence.json  Test_S1_07_Dolt_Truth_Context.json  Test_S1_07_Expected_Output.md  Test_S1_08_Beads_Trace_Construction.json  Test_S1_08_Expected_Output.md  Test_S1_09_Expected_Output.md  Test_S1_10_Expected_Output.md  Test_S1_10_Judgment_Emission.json  Test_S1_11_Expected_Output.md  Test_S1_11_Human_Correction.json
hestami_deep_historian/orchestrator/src/historian/: __init__.py  cli.py  config.py
hestami_deep_historian/orchestrator/src/historian/services/: __init__.py  dolt.py  pageindex.py  vllm.py
hestami_deep_historian/orchestrator/src/historian/workflows/: __init__.py  verification.py
hestami_deep_historian/services/dolt/: Dockerfile  entrypoint.sh
hestami_deep_historian/services/dolt/init/: init.sql
hestami_deep_historian/services/orchestrator/: Dockerfile
hestami_deep_historian/services/pageindex/: Dockerfile  requirements.txt
hestami_deep_historian/services/pageindex/app/: __init__.py  main.py
hestami_deep_historian/services/vllm/: Dockerfile
hestami_deep_historian/tests/: __init__.py  test_phase0_integration.py  test_phase1_pageindex.py
janumicode_v2/test-and-evaluation/thin-slice-workspaces/thin-slice-workspace-156/project/: pyproject.toml
janumicode_v2/test-and-evaluation/thin-slice-workspaces/thin-slice-workspace-156/project/src/cross_run_refactoring/: interface_contracts.py  test_completion.py  test_interface_contracts.py  verification.py
janumicode_v2/test-and-evaluation/thin-slice-workspaces/thin-slice-workspace-156/project/src/shared/: __init__.py  api_routes.py  db_models.py
test-and-evaluation/calibration-workspaces/calibration-workspace-cal-41/project/: pyproject.toml
test-and-evaluation/calibration-workspaces/calibration-workspace-cal-41/project/src/shared/: dm_property_record.py
(+6088 files in other folders)
