[project]
name = "historian-agent-platform"
version = "0.1.0"
description = "Local-first, auditable AI system for verifying proposals against authoritative specifications"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Hestami AI Team" }
]
keywords = ["ai", "verification", "compliance", "llm", "rag"]

dependencies = [
    # DBOS - Durable workflow execution
    "dbos>=1.0.0",

    # Database - Dolt is MySQL-compatible
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "cryptography>=42.0.0",  # Required for pymysql auth methods
    "mysql-connector-python>=8.0.0",  # Better auth support for Dolt

    # HTTP clients for service communication
    "httpx>=0.27.0",
    "openai>=1.0.0",  # For vLLM OpenAI-compatible API

    # Data models and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Logging and observability
    "structlog>=24.0.0",

    # Async support
    "anyio>=4.0.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # API server
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",

    # Configuration
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",

    # Utilities
    "tenacity>=8.0.0",  # Retry logic
    "xxhash>=3.0.0",    # Fast hashing for proposal IDs
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
historian = "historian.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator/src/historian"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["historian"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
