[project]
name = "service_request"
version = "0.1.0"
description = "service_request using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
kickoff = "service_request.main:kickoff"
plot = "service_request.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
