[tool.janumicode]
area = "native-client"
type = "area-type"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["src"]
addopts = "-ra -q --strict-markers"
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project]
name = "native-clients"
version = "0.1.0"
description = "Skeleton for the 'other' (Python) area of native-client."
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options.optional-dependencies]
dev = [
  "pytest>=8",
]
