[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyurl-service"
version = "0.1.0"
description = "TinyURL service with analytics and data governance capabilities"
authors = [
    {name = "TinyURL Development Team"}
]
dependencies = [
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "cryptography>=40.0",
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0",
    "mypy>=1.0",
]

[project.scripts]
tinyurl-service = "src.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "UP",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"